test/compile_failure/12_address_of_rvalue.c
// EXPECT-ERRORS: 1
// EXPECT: address-of operand is not an lvalue
int main() {
    int *pointer = &(1 + 2);
    return 0;
}
